--- a/index.ipynb
+++ b/index.ipynb
@@ -205,8 +205,7 @@
    ],
    "source": [
     "def parse_trips(trips):\n",
-    "    return trips and list(map(lambda trip: {'trip_distance': float(trip['trip_distance']), 'pickup_latitude': float(trip['pickup_latitude']), 'pickup_longitude': float(trip['pickup_longitude'])},trips))\n",
-    "cleaned_trips = float_values(parsed_trips)"
+    "        return list(map(lambda trip: {'trip_distance': trip['trip_distance'], 'pickup_latitude': trip['pickup_latitude'], 'pickup_longitude': trip['pickup_longitude']},trips))"
    ]
   },
   {
