--- a/index.ipynb
+++ b/index.ipynb
@@ -241,8 +241,7 @@
    ],
    "source": [
     "def float_values(trips):    \n",
-    "    eturn trips and list(map(lambda trip: {'trip_distance': float(trip['trip_distance']), 'pickup_latitude': float(trip['pickup_latitude']), 'pickup_longitude': float(trip['pickup_longitude'])},trips))\n",
-    "cleaned_trips = float_values(parsed_trips)"
+    "    eturn trips and list(map(lambda trip: {'trip_distance': float(trip['trip_distance']), 'pickup_latitude': float(trip['pickup_latitude']), 'pickup_longitude': float(trip['pickup_longitude'])},trips)) \n"
    ]
   },
   {
