Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -240,8 +240,9 @@
     }
    ],
    "source": [
-    "def float_values(trips):    \n",
-    "    eturn trips and list(map(lambda trip: {'trip_distance': float(trip['trip_distance']), 'pickup_latitude': float(trip['pickup_latitude']), 'pickup_longitude': float(trip['pickup_longitude'])},trips)) \n"
+    "def float_values(trips):\n",
+    "        return trips and list(map(lambda trip: {'trip_distance': float(trip['trip_distance']), 'pickup_latitude': float(trip['pickup_latitude']), 'pickup_longitude': float(trip['pickup_longitude'])},trips))\n",
+    "    "
    ]
   },
   {
